--- a/app/src/main/res/menu/menu_search.xml
+++ b/app/src/main/res/menu/menu_search.xml
@@ -2,7 +2,7 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    tools:context="com.example.lab2_moviles.Activity.AdmProfesorActivity">
+    tools:context="com.example.lab2_moviles.Activity.*">
     <item
         android:id="@+id/action_search"
         android:icon="@drawable/ic_search"
