--- a/app/src/main/res/layout/content_adm_curso.xml
+++ b/app/src/main/res/layout/content_adm_curso.xml
@@ -4,7 +4,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior">
+    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:showIn="@layout/activity_adm_curso">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_cursosFld"
