--- a/app/src/main/res/layout/content_adm_curso.xml
+++ b/app/src/main/res/layout/content_adm_curso.xml
@@ -9,10 +9,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_cursosFld"
-        android:layout_width="397dp"
-        android:layout_height="341dp"
+        android:layout_width="442dp"
+        android:layout_height="730dp"
         android:clipToPadding="false"
         android:paddingBottom="50dp"
         android:scrollbars="vertical"
-        tools:layout_editor_absoluteX="6dp" />
+        tools:layout_editor_absoluteX="-2dp"
+        tools:layout_editor_absoluteY="59dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
