--- a/app/src/main/res/layout/content_adm_curso.xml
+++ b/app/src/main/res/layout/content_adm_curso.xml
@@ -5,15 +5,16 @@
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    tools:context="com.example.lab2_moviles.Activity.AdmCursoActivity"
     tools:showIn="@layout/activity_adm_curso">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_cursosFld"
-        android:layout_width="442dp"
-        android:layout_height="730dp"
+        android:layout_width="400dp"
+        android:layout_height="743dp"
         android:clipToPadding="false"
         android:paddingBottom="50dp"
         android:scrollbars="vertical"
-        tools:layout_editor_absoluteX="-2dp"
-        tools:layout_editor_absoluteY="59dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="-1dp" />
 </androidx.constraintlayout.widget.ConstraintLayout>
